--- a/css/index.css
+++ b/css/index.css
@@ -1,29 +1,38 @@
 /*2018.10.26*/
 body{
-	font-family: "Helvetica","Arial","serif";
-	color: #333;
-	background-color: #ccc;
-	margin: 1em 10%;
+    font-family: "Helvetica", "Arial", Serif, serif;
+    color: #333;
+    background-color: #ccc;
+    margin: 1em 10%;
 }
 h1{
-	color: #333;
-	background-color: transparent;
+    color: #333;
+    background-color: transparent;
 }
 a{
-	color: #c60;
-	background-color: transparent;
-	font-weight: bold;
-	text-decoration: none;
+    color: #c60;
+    background-color: transparent;
+    font-weight: bold;
+    text-decoration: none;
 }
 ul{
-	padding: 0;
+    padding: 0;
 }
 li{
-	float: left;
-	padding: 1em;
-	list-style: none;
+    float: left;
+    padding: 1em;
+    list-style: none;
 }
 img{
-	display: block;
-	clear: both;
+    display: block;
+    clear: both;
+}
+#imageGallery{
+    list-style: none;
+}
+#imageGallery li{
+    display: inline;
+}
+#imageGallery li a img{
+    border: 0;
 }
