--- a/css/index.css
+++ b/css/index.css
@@ -37,3 +37,13 @@ img{
 #imageGallery li a img{
     border: 0;
 }
+.morelinks{
+    border: 1px dashed #eaeaea;
+    border-radius: 5px;
+    padding: 15px;
+}
+.morelinks > a{
+    display: inline-block;
+    border-radius: 2px;
+    background-color: #777777;
+}
